fix(QCheckbox) fix for scrollbar issue in dense table when last row selected fix: #3922 (#3925)
* WIP: dense selection table to reproduce and test the bug #3922

* fix(QCheckbox): change focus ring diameter for dense checkboxes to fix the bug in dense table

fix quasarframework/quasar#3922

* Update checkbox.styl

--- a/quasar/src/components/checkbox/checkbox.styl
+++ b/quasar/src/components/checkbox/checkbox.styl
@@ -119,3 +119,6 @@ body.desktop
     &--dense:focus:not(.disabled) .q-checkbox__inner:before
       transform scale3d(2, 2, 2)
 
+    .q-table--dense .q-checkbox--dense:focus:not(.disabled) .q-checkbox__inner:before
+      transform scale3d(1.4, 1.4, 1.4)
+
